add the naviagtion feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav">
           <div><b>Awesome Books</b></div>
           <div>
-            <a href="#" id="list" onclick="displayList(this)">List</a> | <a href="#" id="add" onclick="displayAdd(this)">Add new</a> | <a href="#" id="contact" onclick="displayContact(this)">Contact</a>
+            <a href="#" id="list">List</a> | <a href="#" id="add">Add new</a> | <a href="#" id="contact">Contact</a>
           </div>
         </nav>
         <div class="date"></div>
@@ -58,7 +58,7 @@
           Copyright Victor 
         </footer>
       </section>
-    <script src="index.js"></script>
+    <script type ="module" src="index.js"></script>
     <script src="https://moment.github.io/luxon/global/luxon.js"></script>
 
 </body>
